Loader changes in days counter

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
         <img src="images/main.png" id="logo" />
       </div>
       <div class="col col-12 col-auto text-center">
-        <p class="glitch" id="txt">We'll be back in</p>
-        <p class="glitch" id="timer" data-text=""></p>
+          <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+        <p class="glitch" id="txt" data-text=" "> </p>
+        <p class="glitch" id="timer" data-text=" "> </p>
       </div>
     </div>
 
