--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <title>Cards</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="./css/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <script src="js/particles.min.js"></script>
 <style>
@@ -26,7 +26,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-content" style="max-width:1400px">
 
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-32"> 
+<header class="w3-container w3-center w3-padding-32 w3-animate-left "> 
   <h1><b>Technical Events</b></h1>
   <p>Welcome to the Symposium of  <span class="w3-tag">CIT</span></p>
 </header>
@@ -37,7 +37,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Blog entries -->
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
+  <div class="w3-card-4 w3-margin w3-white w3-animate-left">
     <img src="./images/cc1.jpg" alt="Nature" style="width:100%">
     <div class="w3-container">
       <h3><b>Code Collision</b></h3>
