Events page commit

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="./css/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <script src="js/particles.min.js"></script>
+
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 #particle-bg{
@@ -174,7 +175,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 
     <script>
-      particlesJS.load("particle-bg", "js/particles-config.json");
+      particlesJS.load("particle-bg", a);
 
     </script>
     
