Events page completed

--- a/events.html
+++ b/events.html
@@ -26,105 +26,123 @@
         </section>
 
 
-      <div class="row align-items-center justify-content-center event-container" id="technical">
+      <section class="row align-items-center justify-content-center event-container" id="technical">
         <div class="col-12 col-auto">
-
+          <h3 class="event-header title glitch" data-text="Technical Events">Technical Events</h3>
           <div class="container2">
-            <section class="card2">
+            <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-              </section>
-        <section class="card2">
+                <button class="bttn">Explore More</button>
+              </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-          <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+          <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-          <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+          <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
           <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-        </section>
+          <button class="bttn">Explore More</button>
+        </div>
       </div>
     </div>
     <div id="particle-bg"></div>
   
-      </div>
-      <div class="row align-items-center justify-content-center event-container" id="non-technical">
+      </section>
+      <section class="row align-items-center justify-content-center event-container" id="non-technical">
         <div class="col-12 col-auto">
-
+          <h3 class="event-header title glitch" data-text="Non-Technical Events">Non-Technical Events</h3>
           <div class="container2">
-            <section class="card2">
+            <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-              </section>
-            <section class="card2">
+                <button class="bttn">Explore More</button>
+              </div>
+            <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-              </section>
-        <section class="card2">
+                <button class="bttn">Explore More</button>
+              </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-          <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+          <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-          <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+          <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
           <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-        </section>
+          <button class="bttn">Explore More</button>
+        </div>
       </div>
     </div>
     <div id="particle-bg"></div>
   
-      </div>
-      <div class="row align-items-center justify-content-center event-container" id="workshops">
+      </section>
+      <section class="row align-items-center justify-content-center event-container" id="workshops">
         <div class="col-12 col-auto">
-
+          <h3 class="event-header title glitch" data-text="Workshops">Workshops</h3>
           <div class="container2">
-            <section class="card2">
+            <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-              </section>
-        <section class="card2">
+                <button class="bttn">Explore More</button>
+              </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
-        <section class="card2">
+            <button class="bttn">Explore More</button>
+          </div>
+        <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          </section>
+            <button class="bttn">Explore More</button>
+          </div>
       </div>
     </div>
     <div id="particle-bg"></div>
   
-      </div>
+      </section>
 
       
       
