Started Individual event page

--- a/events.html
+++ b/events.html
@@ -33,37 +33,37 @@
             <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-                <button class="bttn">Explore More</button>
+                <a class="bttn" href="#">Explore More</a>
               </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
           <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
           <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
           <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          <button class="bttn">Explore More</button>
+          <a class="bttn" href="#">Explore More</a>
         </div>
       </div>
     </div>
@@ -77,42 +77,42 @@
             <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-                <button class="bttn">Explore More</button>
+                <a class="bttn" href="#">Explore More</a>
               </div>
             <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-                <button class="bttn">Explore More</button>
+                <a class="bttn" href="#">Explore More</a>
               </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
           <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
           <div class="card2">
             <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
           <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-          <button class="bttn">Explore More</button>
+          <a class="bttn" href="#">Explore More</a>
         </div>
       </div>
     </div>
@@ -126,17 +126,17 @@
             <div class="card2">
               <h3 class="title">Event</h3>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-                <button class="bttn">Explore More</button>
+                <a class="bttn" href="#">Explore More</a>
               </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
         <div class="card2">
           <h3 class="title">Event</h3>
             <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, sequi.</p>
-            <button class="bttn">Explore More</button>
+            <a class="bttn" href="#">Explore More</a>
           </div>
       </div>
     </div>
