Finish Event UI and Content

--- a/html/events.html
+++ b/html/events.html
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/bootstrap.min.css" />
   <link rel="stylesheet" href="../css/events.css">
-  <title>Hackerz | Technical Events</title>
+  <title>Hackerz | Events Catalog</title>
 </head>
 
 <body>
   <nav>
     <img src="../images/NewHackerzWhite.png" width="80" alt="hackerzLogo" class="hackerzLogo" />
-    <h3 class="event-header title glitch" data-text="Technical Events">Events Catalog</h3>
-    <a href="#login" id="login-btn" data-toggle="modal" data-target="#login-register">
+    <h3 class="event-header title glitch" data-text="Events Catalog">Events Catalog</h3>
+    <a href="/login" id="login-btn">
       Login
     </a>
   </nav>
@@ -22,29 +22,25 @@
     <div class="grid">
       <a href="/events/technical">
         <div class="card2 item1 spz" id="e_technical">
-          <img class="hideableLogo" src="../icons/technical-filled.png">
-          <img class="hiddenLogo" src="../icons/technical-filled.png">
+          <img style="width: 100px; height: 100px;" src="../icons/technical-filled.png">
           <h3 class="title">Technical</h3>
         </div>
       </a>
       <a href="/events/non-technical">
       <div class="card2 item2 spz" id="e_non-technical">
-        <img class="hideableLogo" src="../icons/non-technical-filled.png">
-        <img class="hiddenLogo" src="../icons/non-technical-filled.png">
+        <img style="width: 100px; height: 100px;" src="../icons/non-technical-filled.png">
         <h3 class="title">Non-Technical</h3>
       </div>
       </a>
       <a href="/events/workshops">
       <div class="card2 item3 spz" id="e_workshops">
-        <img class="hideableLogo" src="../icons/workshops-filled.png">
-        <img class="hiddenLogo" src="../icons/workshops-filled.png">
+        <img style="width: 100px; height: 100px;" src="../icons/workshops-filled.png">
         <h3 class="title">Workshops</h3>
       </div>
       </a>
       <a href="/events/gaming">
       <div class="card2 item4 spz" id="e_gaming">
-        <img class="hideableLogo" src="../icons/gaming-filled.png">
-        <img class="hiddenLogo" src="../icons/gaming-filled.png">
+        <img style="width: 100px; height: 100px;" src="../icons/gaming-filled.png">
         <h3 class="title">Gaming</h3>
       </div>
       </a>
@@ -53,116 +49,10 @@
 
   </section>
 
-  <!-- Login/Register Modal -->
-  <div class="modal fade" tabindex="-1" role="dialog" id="login-register" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content" id="register">
-        <div class="modal-body">
-          <ul class="nav nav-tabs nav-fill">
-            <li class="nav-item">
-              <a class="nav-link active show" id="login-tab" data-toggle="tab" href="#login" role="tab"
-                aria-controls="login" aria-selected="true">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="signup-tab" data-toggle="tab" href="#signup" role="tab"
-                aria-controls="signup">Sign Up</a>
-            </li>
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane fade" role="tabpanel" id="signup" aria-labelledby="signup-tab">
-              <!-- <p class="title text-center event-reg-header">
-                  Let me hack the event
-                </p>
-                <hr /> -->
-              <!-- <input type="email" name="email" id="mail-id" /> -->
-              <form action="" class="text-center">
-                <div class="row align-items-center justify-content-center">
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="email" id="register-email" autocomplete="on" />
-                      <label for="register-email">Email</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="text" id="college" autocomplete="on" />
-                      <label for="college">College</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="number" max="4" id="year" autocomplete="on" />
-                      <label for="year">Year</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="text" id="department" autocomplete="on" />
-                      <label for="department">Department</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="tel" id="phone-num" autocomplete="on" />
-                      <label for="phone-num">Phone number</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="password" id="register-password" autocomplete="on" />
-                      <label for="register-password">Password</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-
-                  <button class="bttn showw" type="submit">Register me</button>
-                </div>
-              </form>
-            </div>
-            <div class="tab-pane fade active show" role="tabpanel" id="login" aria-labelledby="login-tab">
-              <form action="" class="text-center">
-                <div class="row align-items-center justify-content-center">
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="email" id="login-email" autocomplete="on" />
-                      <label for="login-email">Email</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-auto">
-                    <div class="mat-input-outer">
-                      <input type="password" id="login-password" autocomplete="on" />
-                      <label for="register-password">Password</label>
-                      <div class="border"></div>
-                    </div>
-                  </div>
-                </div>
-                <button class="bttn showw" type="submit">Login</button>
-
-              </form>
-            </div>
-          </div>
-          <div id="pbg2"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- ------------------------------------------------------------------------------------------ -->
-
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/particles.js"></script>
   <script>
     particlesJS.load("particle-bg", "../js/particles-config.json");
-    particlesJS.load("pbg2", "../js/particles-config.json");
-    document.getElementById("pbg2").onclick = function n(e) {
-      $("#login-register").modal("hide");
-    };
   </script>
 </body>
 
